@@ -1,0 +1,67 @@
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<html>
+<head>
+  <meta content="text/html; charset=ISO-8859-1"
+ http-equiv="Content-Type">
+  <title>Qtstalker: INDICATOR_PLOT_DATE_GET</title>
+  <link rel="stylesheet" type="text/css" href="qtstalker.css"
+ media="screen">
+  <script src="qtstalker.js" type="text/javascript"> </script>
+</head>
+<body>
+<div id="content">
+<div id="rightPanel">
+<div id="toc">
+<hr>
+<ul>
+  <li><a href="index.html">Home</a></li>
+  <li><a href="toc.html">Table of Contents</a></li>
+</ul>
+</div>
+</div>
+<!-- Content -->
+<h1>INDICATOR_PLOT_DATE_GET
+</h1>
+<br>
+<table style="text-align: left; width: 1336px; height: 153px;"
+ border="1" cellpadding="2" cellspacing="2">
+  <tbody>
+    <tr>
+      <td style="vertical-align: top;"><span style="font-weight: bold;">DESCRIPTION:</span></td>
+      <td style="vertical-align: top;">Returns the date in FORMAT at
+INDEX position. Returned data stored in KEY.<br>
+      <br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;"><span style="font-weight: bold;">SYNTAX:</span></td>
+      <td style="vertical-align: top;">PLUGIN = INDICATOR_PLOT_DATE_GET<br>
+INDEX = &lt;INTEGER&gt;<br>
+DATE_FORMAT = &lt;<a href="APIDateFormat.html">DATE FORMAT</a>&gt;<br>
+      <br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;"><span style="font-weight: bold;">RETURNS:</span></td>
+      <td style="vertical-align: top;">'0' = Success<br>
+'ERROR' =
+Failure<br>
+KEY = INDICATOR_PLOT_DATE_GET_VALUE<br>
+      <br>
+      </td>
+    </tr>
+    <tr>
+      <td style="vertical-align: top;"><span style="font-weight: bold;">EXAMPLE:</span></td>
+      <td style="vertical-align: top;">PLUGIN=INDICATOR_PLOT_DATE_GET,INDEX=100,DATE_FORMAT=yyyy-MM-dd
+HH:mm:ss<br>
+      <br>
+      </td>
+    </tr>
+  </tbody>
+</table>
+<br>
+<br>
+<span style="font-weight: bold;"></span><br>
+</div>
+</body>
+</html>
