@@ -26,7 +26,6 @@
 #include <QList>
 #include <QHash>
 #include <QObject>
-//#include <QMetaType>
 
 #include "Curve.h"
 #include "Setting.h"
@@ -40,15 +39,12 @@ class Indicator : public QObject
   
   public:
     Indicator ();
-    void setParms (QString name, QString command, QString script, QString dialog, bool lock, bool date, bool log);
     QString & name ();
     bool lock ();
     bool date ();
     bool log ();
     QString & script ();
     QString & command ();
-    QString & dialog ();
-    QString & dialogSettings ();
     void setLine (QString, Curve *);
     void setLine (int, Curve *);
     Curve * line (QString);
@@ -61,8 +57,6 @@ class Indicator : public QObject
     void clearChartObjects ();
     void weedPlots ();
     void init ();
-    QString toString ();
-    int fromString (QString);
     void loadChartObjects ();
     QHash<QString, Setting> & chartObjects ();
     int chartObjectCount ();
@@ -79,8 +73,6 @@ class Indicator : public QObject
     void setCommand (QString);
     void calculate ();
     void scriptFinished ();
-    void setDialog (QString);
-    void setDialogSettings (QString);
 
   protected:
     QHash<QString, Curve *> _lines;
@@ -88,12 +80,9 @@ class Indicator : public QObject
     QString _name;
     QString _script;
     QString _command;
-    QString _dialog;
-    QString _dialogSettings;
     bool _lock;
     bool _date;
     bool _log;
-    int _modified;
 };
 
 // this is for passing Indicator data between threads
