@@ -26,6 +26,7 @@
 
 IndicatorDataBase::IndicatorDataBase ()
 {
+  _table = "indicator" + g_session;
   init();
 }
 
@@ -44,8 +45,6 @@ void IndicatorDataBase::init ()
       qDebug() << "IndicatorDataBase::init:" << _db.lastError().text();
   }
 
-  _table = "indicator" + g_session;
-  
   QSqlQuery q(_db);
   QString s = "CREATE TABLE IF NOT EXISTS " + _table + " (";
   s.append("name TEXT PRIMARY KEY UNIQUE");
@@ -54,8 +53,8 @@ void IndicatorDataBase::init ()
   s.append(", log INT");
   s.append(", command TEXT");
   s.append(", script TEXT");
-  s.append(", dialog TEXT");
-  s.append(", dialogSettings TEXT");
+  s.append(", dialog TEXT"); // unused
+  s.append(", dialogSettings TEXT"); // unused
   s.append(")");
   q.exec(s);
   if (q.lastError().isValid())
@@ -72,7 +71,7 @@ int IndicatorDataBase::load (Indicator *i)
   }
 
   QSqlQuery q(_db);
-  QString s = "SELECT command,script,dialog,dialogSettings,lock,log,date FROM " + _table + " WHERE name='" + name + "'";
+  QString s = "SELECT command,script,lock,log,date FROM " + _table + " WHERE name='" + name + "'";
   q.exec(s);
   if (q.lastError().isValid())
   {
@@ -86,8 +85,6 @@ int IndicatorDataBase::load (Indicator *i)
   int pos = 0;
   i->setCommand(q.value(pos++).toString());
   i->setScript(q.value(pos++).toString());
-  i->setDialog(q.value(pos++).toString());
-  i->setDialogSettings(q.value(pos++).toString());
   i->setLock(q.value(pos++).toInt());
   i->setLog(q.value(pos++).toInt());
   i->setDate(q.value(pos++).toInt());
@@ -106,22 +103,49 @@ int IndicatorDataBase::save (Indicator *i)
 
   QSqlQuery q(_db);
   _db.transaction();
-  
-  QString s = "INSERT OR REPLACE INTO " + _table + " (name,command,script,dialog,dialogSettings,lock,log,date) VALUES (";
-  s.append("'" + name + "'");
-  s.append(",'" + i->command() + "'");
-  s.append(",'" + i->script() + "'");
-  s.append(",'" + i->dialog() + "'");
-  s.append(",'" + i->dialogSettings() + "'");
-  s.append("," + QString::number(i->lock()));
-  s.append("," + QString::number(i->log()));
-  s.append("," + QString::number(i->date()));
-  s.append(")");
+
+  QString s = "SELECT name FROM " + _table + " WHERE name='" + name + "'";
   q.exec(s);
   if (q.lastError().isValid())
   {
     qDebug() << "IndicatorDataBase::save:" << q.lastError().text();
     return 1;
+  }
+
+  if (q.next())
+  {
+    // record exists, use SET
+    s = "UPDATE " + _table;
+    s.append(" SET command='" + i->command() + "'");
+    s.append(", script='" + i->script() + "'");
+    s.append(", lock=" + QString::number(i->lock()));
+    s.append(", log=" + QString::number(i->log()));
+    s.append(", date=" + QString::number(i->date()));
+    s.append(" WHERE name='" + name + "'");
+    q.exec(s);
+    if (q.lastError().isValid())
+    {
+      qDebug() << "IndicatorDataBase::save:" << q.lastError().text();
+      return 1;
+    }
+  }
+  else
+  {
+    // insert new record
+    s = "INSERT OR REPLACE INTO " + _table + " (name,command,script,lock,log,date) VALUES (";
+    s.append("'" + name + "'");
+    s.append(",'" + i->command() + "'");
+    s.append(",'" + i->script() + "'");
+    s.append("," + QString::number(i->lock()));
+    s.append("," + QString::number(i->log()));
+    s.append("," + QString::number(i->date()));
+    s.append(")");
+    q.exec(s);
+    if (q.lastError().isValid())
+    {
+      qDebug() << "IndicatorDataBase::save:" << q.lastError().text();
+      return 1;
+    }
   }
 
   _db.commit();
@@ -168,25 +192,6 @@ int IndicatorDataBase::indicators (QStringList &l)
     l << q.value(0).toString();
 
   l.sort();
-
-  return 0;
-}
-
-int IndicatorDataBase::dialog (QString name, QString &d)
-{
-  d.clear();
-
-  QSqlQuery q(_db);
-  QString s = "SELECT dialog FROM " + _table + " WHERE name='" + name + "'";
-  q.exec(s);
-  if (q.lastError().isValid())
-  {
-    qDebug() << "IndicatorDataBase::dialog:" << q.lastError().text();
-    return 1;
-  }
-
-  if (q.next())
-    d = q.value(0).toString();
 
   return 0;
 }
