@@ -1,0 +1,2 @@
+Makefile
+moc_*.cpp
