@@ -1,0 +1,7 @@
+!include( ../../../script.plugin.config ){
+  message( "Oops -- No custom build options specified" )
+}
+
+HEADERS += INDICATOR_PLOT_DATE_GET.h
+
+SOURCES += INDICATOR_PLOT_DATE_GET.cpp
