@@ -187,6 +187,7 @@ SUBDIRS += plugins/script/INDICATOR_PLOT_COLOR_ALL
 SUBDIRS += plugins/script/INDICATOR_PLOT_COLOR_COMPARE_INDEX
 SUBDIRS += plugins/script/INDICATOR_PLOT_COLOR_COMPARE_VALUE
 SUBDIRS += plugins/script/INDICATOR_PLOT_COLOR_SET
+SUBDIRS += plugins/script/INDICATOR_PLOT_DATE_GET
 SUBDIRS += plugins/script/INDICATOR_PLOT_INDEX_DELETE
 SUBDIRS += plugins/script/INDICATOR_PLOT_INDEX_RANGE
 SUBDIRS += plugins/script/INDICATOR_PLOT_INDEX_SHIFT
